# NLP

./: .gitignore  README.md  pyproject.toml  report.md
app/: __init__.py  evaluation.py  extractor.py  formatter.py  main.py  model_runner.py  parser.py  pipeline.py  prompt_builder.py  schemas.py  utils.py
configs/: models.yaml  prompts.yaml
dataset/: eval_samples.json
eval_output/: comparison_results.json  comparison_table.md
eval_output/mock/: metrics.json
eval_output/mock/predictions/: cafe_website_pred.json  cafe_website_raw.txt  dental_clinic_booking_pred.json  dental_clinic_booking_raw.txt  gym_class_booking_pred.json  gym_class_booking_raw.txt  library_room_reservation_pred.json  library_room_reservation_raw.txt  school_club_scheduler_pred.json  school_club_scheduler_raw.txt  tutor_slot_platform_pred.json  tutor_slot_platform_raw.txt
output/: spec.json  spec.md  spec_flan_t5.json  spec_flan_t5.md  spec_flant5.json  spec_flant5.md  spec_phi.json  spec_phi.md  spec_qwen.json  spec_qwen.md
samples/: sample_conversation_1.txt  sample_conversation_2.txt  sample_conversation_2_no_label.txt  test.txt
tests/: test_evaluation.py  test_extractor.py  test_formatter.py  test_model_runner.py  test_parser.py  test_pipeline.py  test_pipeline_chunking.py  test_schema.py
